// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate > generateIO 1`] = `
{
  "00": "",
  "01": "",
  "10": "",
  "11": "",
}
`;

exports[`generate > generateIO 2`] = `
{
  "000": "",
  "001": "",
  "010": "",
  "011": "",
  "100": "",
  "101": "",
  "110": "",
  "111": "",
}
`;

exports[`generate > generateIO 3`] = `
{
  "0000": "",
  "0001": "",
  "0010": "",
  "0011": "",
  "0100": "",
  "0101": "",
  "0110": "",
  "0111": "",
  "1000": "",
  "1001": "",
  "1010": "",
  "1011": "",
  "1100": "",
  "1101": "",
  "1110": "",
  "1111": "",
}
`;

exports[`generate > generateOI 1`] = `
{
  "a": "",
  "b": "",
}
`;

exports[`generate > generateOI 2`] = `
{
  "a": "",
  "b": "",
  "c": "",
}
`;

exports[`generate > generateOI 3`] = `
{
  "a": "",
  "b": "",
  "c": "",
  "d": "",
}
`;
